--- a/core/core_network_domain/build.gradle
+++ b/core/core_network_domain/build.gradle
@@ -16,4 +16,7 @@ dependencies {
     //Dagger
     implementation("com.google.dagger:dagger:2.40.5")
     kapt("com.google.dagger:dagger-compiler:2.40.5")
+
+    //Coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0")
 }
