--- a/feature/feature_map/build.gradle
+++ b/feature/feature_map/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id("kotlin-kapt")
 }
 
 android {
@@ -37,6 +38,7 @@ android {
 
 dependencies {
 
+    implementation project(":core:core_network_domain")
     implementation project(":core:core-utils")
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -61,11 +63,21 @@ dependencies {
     implementation("androidx.navigation:navigation-compose:2.4.2")
 
     //Google map
-    implementation("com.google.maps.android:maps-compose:1.0.1")
+    implementation("com.google.maps.android:maps-compose:1.2.0")
 
     //Play services map
     implementation("com.google.android.gms:play-services-maps:18.0.2")
 
     //Permissions
     implementation("com.google.accompanist:accompanist-permissions:0.19.0")
+
+    //Dagger
+    implementation("com.google.dagger:dagger:2.40.5")
+    kapt("com.google.dagger:dagger-compiler:2.40.5")
+
+    //Coil
+    implementation("io.coil-kt:coil-compose:1.4.0")
+
+    //Lottie
+    implementation("com.airbnb.android:lottie-compose:4.1.0")
 }
