android maps app

--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,4 @@ include ':feature:feature_intro_start'
 include ':core:core-utils'
 include ':core:core_network_domain'
 include ':core:core_network_data'
+include ':feature:feature_weather'
