--- a/feature/feature_weather/build.gradle
+++ b/feature/feature_weather/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id("kotlin-kapt")
 }
@@ -8,16 +8,11 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.maps"
         minSdk 21
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -39,45 +34,44 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
     }
-    packagingOptions {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
-    }
 }
 
 dependencies {
 
-    implementation project(":feature:feature_map")
-    implementation project(":feature:feature_weather")
-    implementation project(":feature:feature_intro_start")
-    implementation project(":core:core-utils")
     implementation project(":core:core_network_domain")
-    implementation project(":core:core_network_data")
+    implementation project(":core:core-utils")
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Compose
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation 'androidx.activity:activity-compose:1.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
+    //Lifecycle
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+
     //Navigation
     implementation("androidx.navigation:navigation-compose:2.4.2")
+
+    //Permissions
+    implementation("com.google.accompanist:accompanist-permissions:0.19.0")
 
     //Dagger
     implementation("com.google.dagger:dagger:2.40.5")
     kapt("com.google.dagger:dagger-compiler:2.40.5")
 
-    //Retrofit
-    implementation("com.squareup.retrofit2:retrofit:2.9.0")
-    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
+    //Coil
+    implementation("io.coil-kt:coil-compose:1.4.0")
 
-    //Permissions
-    implementation("com.google.accompanist:accompanist-permissions:0.19.0")
+    //Lottie
+    implementation("com.airbnb.android:lottie-compose:4.1.0")
 }
