--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id("kotlin-kapt")
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21'
 }
 
 android {
@@ -80,4 +81,8 @@ dependencies {
 
     //Permissions
     implementation("com.google.accompanist:accompanist-permissions:0.19.0")
+
+    //Kotlin serialization and retrofit
+    implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0")
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
 }
