--- a/core/core_network_domain/build.gradle
+++ b/core/core_network_domain/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java-library'
     id 'org.jetbrains.kotlin.jvm'
     id("kotlin-kapt")
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21'
 }
 
 java {
@@ -18,5 +19,8 @@ dependencies {
     kapt("com.google.dagger:dagger-compiler:2.40.5")
 
     //Coroutines
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1")
+
+    //Serialization
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
 }
