--- a/feature/feature_weather/build.gradle
+++ b/feature/feature_weather/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id("kotlin-kapt")
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21'
 }
 
 android {
@@ -74,4 +75,7 @@ dependencies {
 
     //Lottie
     implementation("com.airbnb.android:lottie-compose:4.1.0")
+
+    //Serialization
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
 }
