--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.maps"
-        minSdk 21
+        minSdk 26
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -85,4 +85,8 @@ dependencies {
     //Kotlin serialization and retrofit
     implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0")
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
+
+    //Widget
+    implementation "androidx.glance:glance-appwidget:1.0.0-alpha03"
+    implementation "androidx.glance:glance-wear-tiles:1.0.0-alpha03"
 }
