--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,6 @@ include ':core:core-utils'
 include ':core:core_network_domain'
 include ':core:core_network_data'
 include ':feature:feature_weather'
+include ':core:core_database_data'
+include ':core:core_database_domain'
+include ':feature:feature_settings'
