--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation project(":core:core-utils")
     implementation project(":core:core_network_domain")
     implementation project(":core:core_network_data")
+    implementation project(":core:core_database_data")
+    implementation project(":core:core_database_domain")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
@@ -89,4 +91,8 @@ dependencies {
     //Widget
     implementation "androidx.glance:glance-appwidget:1.0.0-alpha03"
     implementation "androidx.glance:glance-wear-tiles:1.0.0-alpha03"
+
+    //Room
+    implementation("androidx.room:room-ktx:2.4.2")
+    kapt("androidx.room:room-compiler:2.4.2")
 }
