--- a/core/core_database_domain/build.gradle
+++ b/core/core_database_domain/build.gradle
@@ -11,6 +11,8 @@ java {
 
 dependencies {
 
+    implementation project(":core:core-utils")
+
     //Dagger
     implementation("com.google.dagger:dagger:2.40.5")
     kapt("com.google.dagger:dagger-compiler:2.40.5")
