--- a/feature/feature_settings/build.gradle
+++ b/feature/feature_settings/build.gradle
@@ -62,4 +62,13 @@ dependencies {
 
     //Navigation
     implementation("androidx.navigation:navigation-compose:2.4.2")
+
+    //Google map
+    implementation("com.google.maps.android:maps-compose:1.2.0")
+
+    //Play services map
+    implementation("com.google.android.gms:play-services-maps:18.0.2")
+
+    //Lifecycle
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
 }
